# cryptography-course

practical_work_10/: README.md
practical_work_10/src/: big-int.h  definitions.h  main.cpp
practical_work_10/src/elliptic-cryptography/: curve.h  digital-signature-algorithm.h  key-pair.h  point.h  schnorr-signature.h  signature-algorithm.h  signature.h  signed-message.h
practical_work_2/: .eslintrc.json  README.md  package-lock.json  package.json  tsconfig.json
practical_work_2/src/: app.ts  my-big-int.ts
practical_work_3/: README.md
practical_work_3/src/: CMakeLists.txt  definitions.h  encryption-and-decryption-library.h  main.cpp  permutation-box.h  substitution-box.h
practical_work_4/: README.md  package-lock.json  package.json
practical_work_4/src/: app.ts
practical_work_5/: README.md
practical_work_5/src/: CMakeLists.txt  main.cpp  own-sha1.cpp  own-sha1.h
practical_work_5/test-data/: test2.txt  test3.txt
practical_work_5/tests/: test1.txt
practical_work_7/: README.md
practical_work_7/src/: big-int.h  definitions.h  elgamal.h  main.cpp
practical_work_8/: README.md
practical_work_8/src/: big-int.h  definitions.h  main.cpp  utilities.h
practical_work_8/src/elliptic-cryptography/: curve.h  functions.h  point.h
practical_work_9/: README.md
practical_work_9/src/: CMakeLists.txt  big-int.h  definitions.h  main.cpp
practical_work_9/src/elliptic-cryptography/: curve.h  diffie-hellman.h  point.h  shared.h
